# athanor

./: .aider.conf.yml  .claudeignore  .coderabbit.yaml  .gitignore  .gitleaksignore  .mcp.json  .mcp.json.full-backup  AGENTS.md  CLAUDE.md  CONSTITUTION.yaml  MEMORY.md  PROJECT.md  README.md  SESSION-LOG.md  STATUS.md  lefthook.yml  setup.ps1
projects/agents/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
projects/agents/config/: subscription-routing-policy.yaml
projects/agents/tests/: bootstrap_test_harness.py  conftest.py  test_activity.py  test_agent_registry.py  test_autonomous_queue.py  test_backbone.py  test_bootstrap_registry.py  test_bootstrap_route_contract.py  test_bootstrap_runtime.py  test_bootstrap_state.py  test_bootstrap_zero_ambiguity_contracts.py  test_cloud_manager.py  test_command_hierarchy.py  test_consolidation.py  test_constitution.py  test_context.py  test_contract_drift.py  test_control_plane_registry.py  test_core_memory.py  test_diagnosis.py  test_digests_route_contract.py  test_domain_registry.py  test_domain_route_contract.py  test_durable_state.py  test_escalation.py  test_execution_tools.py  test_foundry_route_contract.py  test_foundry_state.py  test_goals_durable_state.py  test_governance_state.py  test_governor.py  test_governor_route_contract.py  test_governor_runtime_phase_gate.py  test_input_guard.py  test_intent_miner.py  test_intent_synthesizer.py  test_judge.py  test_launch_governance.py  test_media_tools.py  (+46 more)
projects/gpu-orchestrator/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
(+3446 files in other folders)
