[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "redis>=5.0",
    "prometheus-client>=0.21",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
